<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/title_nav_home" />

        <item
            android:id="@+id/nav_tile_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_nav_list" />

        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/ic_menu_rules"
            android:title="@string/title_nav_scrabble_rules" />

        <!--<item-->
            <!--android:id="@+id/nav_share"-->
            <!--android:icon="@drawable/ic_menu_share"-->
            <!--android:title="@string/title_nav_share_score" />-->



        <!--<item-->
            <!--android:id="@+id/nav_settings"-->
            <!--android:icon="@drawable/ic_menu_settings"-->
            <!--android:title="@string/title_nav_settings" />-->

    </group>

    <item android:title="@string/title_nav_header_other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/title_nav_about" />

            <item
                android:id="@+id/nav_report_problem"
                android:title="@string/title_nav_report_problem" />

        </menu>
    </item>

</menu>
