<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.abc.scrabblepoints.fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E1C273">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"

                android:text="@string/text_header_home"
                android:textColor="@android:color/black"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_enter_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/enter_player_nick"
            android:textAllCaps="true" />


        <TableLayout
            android:id="@+id/table_layout_players"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TableRow
                android:id="@+id/table_row_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_player1"
                    android:layout_width="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:hint="@string/hint_1_player"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#000000" />

                <EditText
                    android:id="@+id/edit_player2"
                    android:layout_width="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:hint="@string/hint_2_player"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#000000" />


                <EditText
                    android:id="@+id/edit_player3"
                    android:layout_width="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:hint="@string/hint_3_player"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#000000" />

                <EditText
                    android:id="@+id/edit_player4"
                    android:layout_width="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:hint="@string/hint_4_player"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textSize="12sp" />

            </TableRow>

        </TableLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/game_player_start"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </RelativeLayout>


    </LinearLayout>

</FrameLayout>
