<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme.AppBarOverlay"
    tools:context="com.example.abc.scrabblepoints.HomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E1C273"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreboard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/text_header_home"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <ImageButton
                android:id="@+id/button_share"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/ic_share" />

            <ImageButton
                android:id="@+id/button_close"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="#f90303"
                android:src="@drawable/ic_close" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:hint="@string/hint_no_player_1"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/player1_input"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:gravity="center"
                    android:inputType="number"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/player1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1.5"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="@string/add_button" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/score_player1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textColor="#000000" />

            </LinearLayout>


        </LinearLayout>


        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#FF909090" />

        <LinearLayout
            android:id="@+id/layout_player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:hint="@string/hint_no_player_2"
                android:textAllCaps="true"
                android:textColor="#000000"

                android:textColorHint="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/player2_input"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:gravity="center"
                    android:inputType="number"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/player2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1.5"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="@string/add_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/score_player2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textColor="#000000" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#FF909090" />

        <LinearLayout
            android:id="@+id/layout_player3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_player3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:hint="@string/hint_no_player_3"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/player3_input"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:gravity="center"
                    android:inputType="number"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/player3_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1.5"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="@string/add_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/score_player3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textColor="#000000" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#FF909090" />

        <LinearLayout
            android:id="@+id/layout_player4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_player4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:hint="@string/hint_no_player_4"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/player4_input"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:gravity="center"
                    android:inputType="number"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/player4_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1.5"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="@string/add_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/score_player4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textColor="#000000" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
